--- a/index.html
+++ b/index.html
@@ -1,11 +1,24 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Juega en linea</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Juega en linea</title>
+
+  <!-- Open Graph (Facebook, WhatsApp) -->
+  <meta property="og:title" content="🎰 Juega en línea y gana más" />
+  <meta property="og:description" content="Reclama tu doble bono del 30% en tu primera y segunda recarga." />
+  <meta property="og:image" content="https://juegaenlinea.vercel.app/casino.jpg" />
+  <meta property="og:url" content="https://juegaenlinea.vercel.app/" />
+  <meta property="og:type" content="website" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="🎰 Juega en línea y gana más" />
+  <meta name="twitter:description" content="Reclama tu doble bono del 30% en tu primera y segunda recarga." />
+  <meta name="twitter:image" content="https://juegaenlinea.vercel.app/casino.jpg" />
+</head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
